added environment based sibling sites, added extra classes for docs

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ disqus_shortname: cloudcannon
 baseurl:
 
 active_sibling:
-main_url: https://cloudcannon.com
+main_url:
 google_site_verification: GkBrJRSQqF43wQVGLUeUJFTPBldtIXGCw9toqvS2o_o
 permalink: pretty
 
