--- a/_data/navigation/siblings.yml
+++ b/_data/navigation/siblings.yml
@@ -1,8 +1,21 @@
-- link: https://cloudcannon.com
-  name: Home
-- link: https://learn.cloudcannon.com/
-  name: Guides
-- link: https://docs.cloudcannon.com/
-  name: Documentation
-- link: https://brand.cloudcannon.com/
-  name: Brand
+development:
+  - name: Home
+    link: http://localhost:4000
+  - name: Guides
+    link: http://localhost:4001
+  - name: Documentation
+    link: http://localhost:4002
+staging:
+  - name: Home
+    link: https://staging.cloudcannon.com
+  - name: Guides
+    link: https://staging-learn.cloudcannon.com/
+  - name: Documentation
+    link: https://staging-docs.cloudcannon.com/
+production:
+  - name: Home
+    link: https://cloudcannon.com
+  - name: Guides
+    link: https://learn.cloudcannon.com/
+  - name: Documentation
+    link: https://docs.cloudcannon.com/
