--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -12,7 +12,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#407afc",
+    "theme_color": "#034ad8",
     "background_color": "#ffffff",
     "display": "standalone"
 }
