removed feed and fixed siblings

--- a/_data/navigation/mobile-menu-items.yml
+++ b/_data/navigation/mobile-menu-items.yml
@@ -9,7 +9,7 @@ navigation_groups:
       - title: Guides
         url: "https://learn.cloudcannon.com/"
       - title: Documentation
-        url: "https://docs.cloudcannon.com/"
+        url: "https://cloudcannon.com/documentation/"
       - title: Experts
         url: "https://cloudcannon.com/experts/"
       - title: Brand
